--- a/v3/templates/index.html
+++ b/v3/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bonanza Scheme</title>
+  <title>Customer Bonanza Scheme</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
