--- a/v3/templates/index.html
+++ b/v3/templates/index.html
@@ -110,7 +110,7 @@
     .buttons {
       margin-top: 20px;
     }
-
+light was here!
     button {
       padding: 14px 28px;
       margin: 0 10px;
